<resources>
    <string name="app_name">Ashraf Traders</string>

    <string name="shop_name">আশরাফ ট্রেডার্স</string>
    <string name="shop_name_en">Ashraf Traders</string>
    <string name="system_name">ব্যবসা ব্যবস্থাপনা সিস্টেম</string>
    <string name="today_summary">আজকের ব্যবসার সারসংক্ষেপ</string>
    <string name="cash_sale">নগদ বিক্রয়</string>
    <string name="nogod">নগদ বিক্রয়</string>
    <string name="baki">বাকিতে বিক্রয়</string>
    <string name="mot_bikroy">মোট বিক্রয়</string>
    <string name="aday">আজ আদায়</string>
    <string name="login">আপনার অ্যাকাউন্টে লগইন করুন</string>
    <string name="welcome">স্বাগতম</string>
    <string name="user_name">ইউজার নাম</string>
    <string name="password">পাসওয়ার্ড</string>
    <string name="login2">লগইন করুন</string>
    <string name="permitted_user">শুধুমাত্র অনুমোদিত ব্যবহারকারীদের জন্য!</string>

    <string name="powered">Powered by Hafizur Rahman</string>
    <string name="version">Version 1.0.0</string>

    <string name="good_morning">শুভ সকাল</string>

    <string name="today_sales">আজকের বিক্রি</string>

    <string name="today_purchase">আজকের ক্রয়</string>

    <string name="total_products">মোট পণ্য</string>

    <string name="customers">গ্রাহক</string>

    <string name="recent_sales">সাম্প্রতিক বিক্রি</string>

    <string name="low_stock">লো স্টক</string>

    <string name="quick_actions">দ্রুত কাজ</string>

    <string name="reports">রিপোর্ট</string>

    <string name="settings">সেটিংস</string>

    <string name="new_sale">নতুন বিক্রি</string>

    <string name="purchase">ক্রয়</string>

    <string name="stock">স্টক</string>

    <string name="profile">প্রোফাইল</string>

    <string name="logout">লগআউট</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>